Fix for knowledge icons on smaller screen resolution

--- a/css/style.css
+++ b/css/style.css
@@ -240,6 +240,10 @@
         height: 100%;
     }
 
+    .knowledge-section__icon {
+        margin: 80px 20px 0 20px;
+    }
+
  }
 
 @media (max-width: 768px) { 
